--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans|Fjalla+One' rel='stylesheet' type='text/css'>
     <link href="bower_components/normalize-css/normalize.css"/>
-    <link href="styles/base.css" rel="stylesheet"/>
-    <link href="styles/modules.css" rel="stylesheet"/>
+    <link href="styles/app.css"/>
 </head>
 <body>
 <header class="navbar">
