Adds basic markup for filter.

--- a/index.html
+++ b/index.html
@@ -13,5 +13,20 @@
     <h1 class="navbar__title">releasely</h1>
     <button class="navbar__login-button">Log In or Sign Up</button>
 </header>
+
+<form class="filter">
+    <select class="filter__order-select">
+        <option selected>Filter by...</option>
+        <option>Release date ascending</option>
+        <option>Release date descending</option>
+    </select>
+    <select class="filter__category-select">
+        <option selected>Category...</option>
+        <option>Development tool</option>
+        <option>Library</option>
+        <option>Language</option>
+    </select>
+    <input class="filter__search" type="text" placeholder="Search..."/>
+</form>
 </body>
 </html>
