--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>releasely</title>
 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans|Fjalla+One' rel='stylesheet' type='text/css'>
-    <link href="bower_components/normalize-css/normalize.css"/>
-    <link href="styles/app.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Fjalla+One" rel="stylesheet" type="text/css"/>
+    <link href="bower_components/normalize-css/normalize.css" rel="stylesheet" type="text/css"/>
+    <link href="styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <header class="navbar">
