Further defines sexy-select, web component structure.

--- a/web_components/sexy-select.html
+++ b/web_components/sexy-select.html
@@ -9,9 +9,18 @@
 
     <template>
         <div class="wrapper">
+
+            <!-- Invisible Select element -->
             <select class="select">
                 <option>swag</option>
             </select>
+
+            <div class="input">
+
+            </div>
+            <div class="dropdown">
+                
+            </div>
         </div>
     </template>
 
